--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,9 @@ vignettes/*.pdf
 
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
+
+.here
+
+20191121_EcoliMG1655_PEPPI_M9-M-20190515_F01-09_2run_CAMsearch_B.tdReport
+
+output/
