--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(crawfish)
 import(assertthat)
 import(ggplot2)
-import(here)
 import(rawDiag)
 import(tictoc)
 importFrom(RSQLite,SQLite)
@@ -25,7 +24,6 @@ importFrom(fs,dir_create)
 importFrom(fs,dir_exists)
 importFrom(fs,dir_ls)
 importFrom(fs,path_ext_remove)
-importFrom(furrr,future_map)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,ggplot)
@@ -45,6 +43,7 @@ importFrom(purrr,map_chr)
 importFrom(purrr,reduce)
 importFrom(purrr,safely)
 importFrom(rawDiag,read.raw)
+importFrom(rlang,set_names)
 importFrom(rmarkdown,render)
 importFrom(stringr,fixed)
 importFrom(stringr,str_detect)
