--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ importFrom(rlang,set_names)
 importFrom(rmarkdown,render)
 importFrom(stringr,fixed)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_extract)
 importFrom(stringr,str_match)
 importFrom(stringr,str_remove)
 importFrom(stringr,str_subset)
